--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^14.0.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "react-test-renderer": "^18.2.0",
     "vite": "^4.3.0"
   }
 }
