--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "react-test-renderer": "^18.2.0",
-    "vite": "^4.3.0"
+    "vite": "^4.3.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
